# memora

./: .gitignore  CMakeLists.txt  README.md  build.sh
memora_cli/cmd/cli/: main.go
memora_server/: .clang-format  CMakeLists.txt  conanfile.txt
memora_server/include/memora/server/: server.hpp  session.hpp
memora_server/src/: main.cpp
memora_server/src/server/: server.cpp  session.cpp
src/: main.cpp
